fix backbutton ios bug.

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -1188,7 +1188,7 @@ label.error{
 }
 
 #lista-servicos{
-  margin-bottom: 60px;
+  margin-bottom: 100px;
 }
 
 .list-item{
